--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Creando portafolio digital, reto # 1 semana 3 de academia Geek, con los recursos propuestos por el equipo de diseño.",
   "main": "index.js",
   "dependencies": {
+    "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0"
@@ -23,6 +24,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production"
