Agregando gh-pages parte 2

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "bugs": {
     "url": "https://github.com/Chicholio/digitalPortafolio/issues"
   },
-  "homepage": "https://github.com/Chicholio/digitalPortafolio#readme"
+  "homepage": "https://github.com/Chicholio/digitalPortafolio"
 }
